--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -6,9 +6,9 @@ on:
 
 env:
   IMAGE_REGISTRY_URL: ghcr.io
-  ###############################################
-  ### Replace <username> with GitHub username ###
-  ###############################################
+  ################################################
+  ### Replace <username> with GitHub username ####
+  ################################################
   DOCKER_IMAGE_NAME: ppottorff-azure-ttt
   AZURE_WEBAPP_NAME: ppottorff-ttt-app
   ###############################################
